# csc5052-final-project

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  README.md  cliff.toml  compose.yaml  devbox.json  justfile  lefthook.yml  pyproject.toml
docs/: CURRENT_ARCHITECTURE.md  DEMO_AND_SUBMISSION_GUIDE.md  FAKE_BACKEND_HOSTING_GUIDE.md  FAKE_DEMO_DEPLOYMENT.md  NODE_CONSOLIDATION_ANALYSIS.md  NODE_RULE_PROMPT_REFACTOR_PLAN.md  SpeakSure++_HuggingFace预训练模型选型与下载清单.md  SpeakSure++_任务拆分清单与开发Roadmap.md  SpeakSure++_推理层Todo模板.md  SpeakSure++_推理层个人Todo.md  SpeakSure++_推理结果JSON字段说明.md  SpeakSure++_系统设计方案.md
scripts/: check_agent.sh  (+5 more)
scripts/command/: .gitignore  README.md  main.py  pyproject.toml
scripts/command/config/: download_models.yaml
scripts/command/src/: __init__.py  download_models.py  release_commit.py
services/agent/: Dockerfile  README.md  backend_bridge.py  cli.py  http_main.py  main.py  pyproject.toml
services/agent/config/: config.toml
services/agent/config/prompts/: README.md  coaching_user.md  feedback_system.md  feedback_user.md  judgment_user.md  lexical_user.md  reasoning_system.md  reasoning_user.md
services/agent/config/prompts/en/: coaching_system.md  coaching_user.md  disfluency_system.md  disfluency_user.md  feedback_system.md  feedback_user.md  json_repair_system.md  json_repair_user.md  judgment_system.md  judgment_user.md  lexical_system.md  lexical_user.md  prosody_system.md  prosody_user.md
services/agent/config/prompts/schemas/: coaching_result.json  disfluency_result.json  feedback_segments_result.json  judgment_result.json  lexical_result.json  prosody_result.json  reasoning_result.json
services/agent/config/prompts/zh/: README.md  coaching_system.md  disfluency_system.md  disfluency_user.md  json_repair_system.md  json_repair_user.md  judgment_system.md  lexical_system.md  prosody_system.md  prosody_user.md
services/agent/config/rules/: context_defaults.en.toml  context_defaults.zh.toml  disfluency_rules.en.toml  disfluency_rules.toml  disfluency_rules.zh.toml  feedback_fallback_rules.en.toml  feedback_fallback_rules.zh.toml  lexical_rules.en.toml  lexical_rules.toml  lexical_rules.zh.toml  prosody_rules.en.toml  prosody_rules.toml  scoring_rules.en.toml  scoring_rules.toml  scoring_rules.zh.toml
services/agent/frontend/: ADMIN_PLATFORM_REFACTOR.md  ADMIN_PLATFORM_TODO.md  README.md  TABBED_UI_PROPOSAL.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
services/agent/frontend/src/: App.tsx  index.css
services/agent/frontend/src/components/debug/: RuntimeMetaCard.tsx
services/agent/frontend/src/components/layout/: AppShell.tsx
services/agent/frontend/src/components/navigation/: SidebarNav.tsx
services/agent/frontend/src/components/pipeline/: MetricBar.tsx  NodeDetailPanel.tsx  NodeGrid.tsx  NodeSpotlight.tsx  ProgressOverview.tsx  ReplayControls.tsx  TimelinePanel.tsx
services/agent/frontend/src/components/results/: FeedbackDeck.tsx  ResultsHero.tsx  SegmentResultsPanel.tsx
services/agent/frontend/src/components/run/: RunFormCard.tsx  SessionOverviewCard.tsx
services/agent/frontend/src/components/shared/: EmptyState.tsx  JsonViewer.tsx  PageSectionCard.tsx
services/agent/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  scroll-area.tsx  textarea.tsx
services/agent/frontend/src/hooks/: useReplayPlayback.ts
services/agent/frontend/src/lib/: analysis-helpers.ts  routes.ts
services/agent/frontend/src/pages/: DebugPage.tsx  PipelinePage.tsx  ResultsPage.tsx  RunPage.tsx
services/agent/frontend/src/store/: analysis-store.ts
services/agent/frontend/src/types/: analysis.ts
services/agent/scripts/: generate_proto.sh
services/agent/src/: __init__.py  config.py  console.py  language.py  logger.py  state.py  wandb_handler.py  workflow.py
services/agent/src/app/: __init__.py  cli_service.py  doctor.py  service_runner.py
services/agent/src/app/usecases/: __init__.py  agent_grpc.py  analysis.py  http_api.py  wandb_upload.py
services/agent/src/asr/: __init__.py  config.py  language_detector.py  remote_api.py  runtime.py
services/agent/src/asr/backends/: __init__.py  onnx_whisper.py
services/agent/src/asr/transports/: __init__.py  grpc_client.py
services/agent/src/backend/: __init__.py
services/agent/src/backend/contracts/: __init__.py  analysis_contracts.py
services/agent/src/backend/nodes/: __init__.py  coaching_node.py  context_node.py  disfluency_node.py  feedback_node.py  judgment_node.py  lexical_node.py  prosody_node.py
services/agent/src/backend/tools/: __init__.py  evidence_summary.py  feature_extractor.py  llm_client.py  prompt_loader.py  rule_loader.py  scorer.py  text_rewrite.py
services/agent/src/orchestration/: __init__.py  contracts.py  graph_builder.py  orchestrator.py
services/agent/src/schemas/: __init__.py  analysis.py
services/agent/src/services/: __init__.py  artifact_loader.py  audio_preprocess.py  result_serializer.py
services/agent/src/services/agent/: __init__.py
services/agent/src/services/agent/contracts/: __init__.py  analysis_contracts.py
services/agent/src/services/agent/nodes/: __init__.py  context_node.py  disfluency_node.py  feedback_node.py  lexical_node.py  prosody_node.py  reasoning_node.py  segmentation_node.py
services/agent/src/services/agent/tools/: __init__.py  feature_extractor.py  llm_client.py  prompt_loader.py  scorer.py
services/agent/src/transports/: __init__.py  grpc_client.py  grpc_server.py  http_server.py
services/agent/tests/: conftest.py  test_agent_grpc_usecase.py  test_analysis_state.py  test_coaching_agent.py  test_config.py  test_context_agent.py  test_disfluency_agent.py  test_evidence_summary.py  test_grpc_transport.py  test_http_transport.py  test_inference_workflow.py  test_language_detector.py  test_lexical_agent.py  test_prompt_config_integration.py  test_prompts.py  test_prosody_agent.py  test_rule_loader.py  test_scorer.py  test_scoring_and_feedback_config.py
(+332 files in other folders)
