[project]
name = "SpeakSure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["huggingface-hub>=0.36.2"]


[dependency-groups]
agent_grpc = [
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "openai>=2.29.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=13.9.0",
    "typer>=0.24.1",
    "wandb>=0.25.1",
]
agent_http = [
    "fastapi>=0.136.1",
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "openai>=2.29.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "rich>=13.9.0",
    "typer>=0.24.1",
    "uvicorn>=0.46.0",
    "wandb>=0.25.1",
]
asr_runtime = [
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "loguru>=0.7.3",
    "protobuf>=6.33.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
hf_asr_onnx = [
    "onnxruntime>=1.19.0",
    "optimum>=2.0.0",
    "sentencepiece>=0.2.1",
    "transformers==4.44.0",
]
monolith_overlay = [
    "fastapi>=0.136.1",
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "huggingface-hub==0.36.2",
    "openai>=2.29.0",
    "optimum>=2.0.0",
    "python-multipart>=0.0.26",
    "tokenizers==0.19.1",
    "transformers==4.44.0",
    "uvicorn>=0.46.0",
]
dev = ["pytest>=9.0.2", "ruff>=0.15.5", "uv>=0.10.12"]
proto = ["grpcio-tools>=1.80.0"]
torch_cpu = ["torch==2.4.0+cpu", "onnxruntime==1.19.0"]
torch_gpu = ["torch==2.4.0", "setfit>=1.1.3", "onnxruntime-gpu>=1.19.0"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
conflicts = [[{ group = "torch_cpu" }, { group = "torch_gpu" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "torch_cpu" },
    { index = "pytorch-gpu", group = "torch_gpu" },
]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120
extend-exclude = ["services/gen"]

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["F401"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
    "**/node_modules",
    "**/.*",
    "alembic/versions/*_auto.py",
]

[tool.pytest.ini_options]
testpaths = ["services/agent/tests"]
