[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "command"
version = "0.1.0"
description = "Interactive model download command for SpeakSure++"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub==0.36.2",
    "httpx>=0.27.0,<1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
]

[project.scripts]
download-models = "src.download_models:main"
