[project]
name = "speaksure-agent"
version = "0.1.0"
description = "SpeakSure++ Python analysis engine"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
runtime = [
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "huggingface-hub>=0.36.2",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "onnxruntime>=1.19.0",
    "openai>=2.29.0",
    "optimum>=2.0.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=13.9.0",
    "sentencepiece>=0.2.1",
    "tokenizers==0.19.1",
    "transformers==4.44.0",
    "typer>=0.24.1",
    "wandb>=0.25.1",
]
dev = ["pytest>=9.0.2", "ruff>=0.15.5", "uv>=0.10.12"]
ci = [
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "openai>=2.29.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.2",
    "rich>=13.9.0",
    "ruff>=0.15.5",
    "typer>=0.24.1",
    "uv>=0.10.12",
]
proto = ["grpcio-tools>=1.80.0"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
markers = [
    "onnx: requires ONNX or model-runtime dependencies",
    "hf_model: requires Hugging Face model downloads or heavyweight assets",
]
